--- a/zhouyl.html
+++ b/zhouyl.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1 align=center>zhouyl's blog</h1>
-<hr>
+<hr align=center>
 <p>
 <a href="ToMyLove.html" target=blank>click here and a supprise</a>
 </p>
