--- a/zhouyl.html
+++ b/zhouyl.html
@@ -7,10 +7,10 @@
 <body>
 <h1 align=center>zhouyl's blog</h1>
 <hr width=50% align=center>
-<br>
-<img href="http://r.photo.store.qq.com/psb?/V12Fn5aX0uRdDn/tW*NPBaKkumZ7cJxT*26Ft1Reg6s6GpNXYV3veUnR7s!/o/dBUPjMCrJQAA&bo=WAIgA7AEQAYBCKQ!" width=80%>
+<img href="images/zhouyl.jpg" width=80%>
 <p>
 <a href="ToMyLove.html" target=blank>click here and a supprise</a>
 </p>
+<img href="images/zhouyl.jpg" width=80%>
 </body>
 </html>
