--- a/zhouyl.html
+++ b/zhouyl.html
@@ -7,9 +7,9 @@
 <body>
 <h1 align=center>zhouyl's blog</h1>
 <hr width=50% align=center>
-<img src="./images/zhouyl.jpg" width=80%>
+<img src="./images/zhouyl.jpg" align="center" width=80%>
 <p>
-<a href="ToMyLove.html" target=blank>click here and a supprise</a>
+<a href="ToMyLove.html" align="center" target=blank>click here and a supprise</a>
 </p>
 <img href="images/zhouyl.jpg" width=80%>
 </body>
