--- a/zhouyl.html
+++ b/zhouyl.html
@@ -7,7 +7,7 @@
 <body>
 <h1 align=center>zhouyl's blog</h1>
 <hr width=50% align=center>
-<img src="./images/zhouyl.jpg" align="center" width=80%>
+<img src="./images/zhouyl.jpg" align="middle" width=80%>
 <p>
 <a href="ToMyLove.html" align=center target=blank>click here and a supprise</a>
 </p>
