--- a/love/index.html
+++ b/love/index.html
@@ -1,8 +1,8 @@
 ---
-title: 胖梁 与 丹宝宝
+title: 常志 与 雨莲亲
 loving_day: "2013,06,07"
 me: 常志
-her: 雨莲亲
+her: 雨莲
 ---
 <html>
     <head>
@@ -40,11 +40,19 @@ her: 雨莲亲
 						<span class="say"> </span><br>
 			        	<span class="say">总是说让你等等</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">我现在什么都没有，只有一颗爱你的心</span><br>
+			        	<span class="say">我现在什么都没有</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">就要毕业，开始新的生活</span><br>
+			        	<span class="say">只有一颗爱你的心</span><br>
 						<span class="say"> </span><br>
-			        	<span class="say">相信我，不会让你等太久/span><br>
+			        	<span class="say">就要毕业</span><br>
+						<span class="say"> </span><br>
+			        	<span class="say">开始新的生活</span><br>
+						<span class="say"> </span><br>
+			        	<span class="say">相信我</span><br>
+						<span class="say"> </span><br>
+			        	<span class="say">不会让你等太久</span><br>
+						<span class="say"> </span><br>
+			        	<span class="say">我会更加努力</span><br>
 						<span class="say"> </span><br>
 			        	<span class="say">为了你</span><br>
 						<span class="say"> </span><br>
@@ -53,7 +61,7 @@ her: 雨莲亲
 			        </div>
                 </div>
                 <div id="clock-box">
-                    {{ page.me }}<span class="STYLE1">与</span>{{ page.her }}<span class="STYLE1">的故事已经开始了</span>
+                    {{ page.me }}<span class="STYLE1">和</span>{{ page.her }}<span class="STYLE1">的故事已经开始了</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
