--- a/love/index.html
+++ b/love/index.html
@@ -36,7 +36,7 @@ her: 雨莲
 						<span class="say"> </span><br>
 						<span class="say">献给亲爱的雨莲</span><br><br><br>
 						<span class="say"> </span><br>
-                        <span class="say">好久没有送你礼物</span><br>
+                        <span class="say">每当谈起未来</span><br>
 						<span class="say"> </span><br>
 			        	<span class="say">总是说让你等等</span><br>
 						<span class="say"> </span><br>
